# gps-logger

./: .gitignore  config-example.json  gps_server.py  pyproject.toml  test.http
src/gps_logger/: __init__.py  gps_logger.py  gps_logger_auth.py
src/gps_logger/output/: output.py
src/gps_logger/output/file/: gpx.py  raw.py
src/gps_logger/output/web/: web.py
src/gps_logger/server/: gpsrequesthandler.py  server.py
src/gps_logger/server/auth/: api_key.py
src/gps_logger/server/web/: apikey_create.py  device_map.py  web.py
src/gps_logger/server/web/resources/: resources.py
src/gps_logger/server/web/resources/css/: device_map_style.css
src/gps_logger/server/web/resources/html/: apikey_create_page.html  device_map_page.html
src/gps_logger/server/web/resources/js/: apikey_create.js  func_get_human_time.js  func_update_date_delta.js
src/gps_logger/server/web/resources/res/css/: device_map_style.css
src/gps_logger/server/web/resources/res/html/: apikey_create_page.html  device_map_page.html
src/gps_logger/server/web/resources/res/img/: LICENSE
src/gps_logger/server/web/resources/res/js/: build_map.js
src/gps_logger/utils/: args.py  datetime.py  dateutils.py  file.py  logging.py  osm_frame.py  position.py
