
[build-system]
requires = [
    "setuptools>=39.2.0",
    "setuptools_scm[toml]",
    "setuptools-git-versioning",
]
build-backend = "setuptools.build_meta"

[project]

name = "gps-logger"
dynamic = ["version"]
authors = [
  { name="Xeladaren", email="xeladaren@pm.me" },
]
description = "Tool to log GPS data."
readme = "README.md"

requires-python = ">=3.9"

dependencies = [
  "pillow",
  "qrcode", 
  "timezonefinder>=6.5.8",
  "python_magic>=0.4.27"
]

[project.scripts]
gps-logger = "gps_logger:main"
gps-logger-auth = "gps_logger.gps_logger_auth:main"

[tool.setuptools-git-versioning]
enabled = true